--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.5.1",
     "typescript": "4.5.4"
   }
